--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,43 @@
     <meta name="twitter:card" content="summary">
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="icon" type="image/png" href="/assets/outfitry.png">
+    <!-- BreadcrumbList Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://outfitry.app/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Contact",
+          "item": "https://outfitry.app/contact.html"
+        }
+      ]
+    }
+    </script>
+    <!-- ContactPage Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ContactPage",
+      "name": "Contact Outfitry Support",
+      "description": "Get help with Outfitry AI outfit generator app. Contact our support team via email.",
+      "url": "https://outfitry.app/contact.html",
+      "mainEntity": {
+        "@type": "Organization",
+        "name": "Outfitry",
+        "email": "support@outfitry.app",
+        "url": "https://outfitry.app"
+      }
+    }
+    </script>
 </head>
 
 <body>
