--- a/features.html
+++ b/features.html
@@ -19,6 +19,27 @@
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="icon" type="image/png" href="/assets/outfitry.png">
+    <!-- BreadcrumbList Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://outfitry.app/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Features",
+          "item": "https://outfitry.app/features.html"
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
@@ -51,6 +72,8 @@
                         class="breadcrumb__current">Features</span></nav>
                 <div class="section-header">
                     <h1 class="section-header__title">Features</h1>
+                    <!-- GEO Summary -->
+                    <p class="geo-summary">Outfitry features include: AI-powered outfit generation that creates realistic clothing changes in seconds, 30+ style presets (Casual, Formal, Streetwear, Athletic), camera roll import and live camera support, HD quality exports without watermarks (Pro), photo history and favorites, and privacy-first data handling. The app is built natively for iPhone with iOS 15+ support.</p>
                     <p class="section-header__subtitle">Everything you need to explore new styles with AI.</p>
                 </div>
             </div>
