--- a/pricing.html
+++ b/pricing.html
@@ -17,6 +17,27 @@
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="icon" type="image/png" href="/assets/outfitry.png">
+    <!-- BreadcrumbList Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://outfitry.app/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Pricing",
+          "item": "https://outfitry.app/pricing.html"
+        }
+      ]
+    }
+    </script>
     <style>
         /* Dark Gradient Pricing Styles */
         .pricing-section {
@@ -240,6 +261,47 @@
             padding: var(--space-16) var(--space-6) var(--space-12);
         }
     </style>
+    <!-- FAQPage Schema for Pricing -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "How much does Outfitry cost?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Outfitry offers three pricing tiers: Free ($0) with 10 outfit try-ons, Monthly ($4.99) with 400 try-ons per month, and Yearly ($34.99) with 10,000 try-ons per year. The yearly plan saves 42% compared to monthly billing."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How does the try-on limit work?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Each outfit generation counts as one try-on. Monthly subscribers get 400 try-ons that reset each billing cycle. Yearly subscribers get 10,000 try-ons for the full year. Free users get 10 try-ons total."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I cancel my Outfitry subscription anytime?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, you can cancel your Outfitry subscription anytime through Apple's subscription management. Go to Settings → Apple ID → Subscriptions on your iPhone, find Outfitry, and tap Cancel. Your access continues until the end of the current billing period."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What features are included in Pro plans?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Pro plans (Monthly and Yearly) include: all style presets, HD quality exports, no watermarks on exported images, priority processing for faster generation, and significantly more outfit try-ons compared to the free tier."
+          }
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
@@ -271,6 +333,8 @@
             <div class="container">
                 <div class="pricing-section__header">
                     <h1 class="pricing-section__title">Pricing</h1>
+                    <!-- GEO Summary -->
+                    <p class="geo-summary" style="text-align:center; margin:var(--space-6) auto;">Outfitry pricing: Free tier includes 10 outfit try-ons forever. Monthly Pro costs $4.99 for 400 try-ons per month with HD exports, no watermarks, and all style presets. Yearly Pro costs $34.99 (saves 42%) for 10,000 try-ons per year. All Pro features include priority processing. Cancel anytime through Apple subscription settings.</p>
                     <p class="pricing-section__subtitle">Use it for free to try, upgrade when you need more try-ons.</p>
                 </div>
 
