Update website content and styles

--- a/index.html
+++ b/index.html
@@ -619,6 +619,232 @@
       </div>
     </section>
 
+    <!-- Testimonials -->
+    <section class="testimonials">
+      <div class="container">
+        <div class="testimonials__header">
+          <span class="testimonials__badge">Testimonials</span>
+          <h2 class="testimonials__title">What our users say</h2>
+          <p class="testimonials__subtitle">See what people are saying about Outfitry.</p>
+        </div>
+
+        <div class="testimonials__columns">
+          <!-- Column 1 -->
+          <div class="testimonials__column">
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"This app is amazing! I can finally see how outfits look on me before
+                buying. Saved me so much money on returns."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">S</div>
+                <div>
+                  <div class="testimonial-card__name">Sarah M.</div>
+                  <div class="testimonial-card__role">Fashion Blogger</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"The AI is incredibly fast. I uploaded my photo and had 4 outfit
+                variations in seconds. The quality is impressive."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">J</div>
+                <div>
+                  <div class="testimonial-card__name">James K.</div>
+                  <div class="testimonial-card__role">Content Creator</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"Perfect for planning outfits for events. I used it to prepare looks for
+                a wedding and got so many compliments!"</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">E</div>
+                <div>
+                  <div class="testimonial-card__name">Emma L.</div>
+                  <div class="testimonial-card__role">Event Planner</div>
+                </div>
+              </div>
+            </div>
+            <!-- Duplicate for infinite scroll -->
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"This app is amazing! I can finally see how outfits look on me before
+                buying. Saved me so much money on returns."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">S</div>
+                <div>
+                  <div class="testimonial-card__name">Sarah M.</div>
+                  <div class="testimonial-card__role">Fashion Blogger</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"The AI is incredibly fast. I uploaded my photo and had 4 outfit
+                variations in seconds. The quality is impressive."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">J</div>
+                <div>
+                  <div class="testimonial-card__name">James K.</div>
+                  <div class="testimonial-card__role">Content Creator</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"Perfect for planning outfits for events. I used it to prepare looks for
+                a wedding and got so many compliments!"</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">E</div>
+                <div>
+                  <div class="testimonial-card__name">Emma L.</div>
+                  <div class="testimonial-card__role">Event Planner</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Column 2 -->
+          <div class="testimonials__column">
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"As a stylist, this is a game changer. I can show clients different
+                looks without needing actual clothes. Revolutionary."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">M</div>
+                <div>
+                  <div class="testimonial-card__name">Maria G.</div>
+                  <div class="testimonial-card__role">Personal Stylist</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"I was skeptical at first, but the results are surprisingly realistic.
+                Great for experimenting with new styles."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">D</div>
+                <div>
+                  <div class="testimonial-card__name">David R.</div>
+                  <div class="testimonial-card__role">Photographer</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"Love how easy it is to use. Just upload, pick a style, and boom—new
+                outfit. The presets are really well designed."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">A</div>
+                <div>
+                  <div class="testimonial-card__name">Alex T.</div>
+                  <div class="testimonial-card__role">Designer</div>
+                </div>
+              </div>
+            </div>
+            <!-- Duplicate for infinite scroll -->
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"As a stylist, this is a game changer. I can show clients different
+                looks without needing actual clothes. Revolutionary."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">M</div>
+                <div>
+                  <div class="testimonial-card__name">Maria G.</div>
+                  <div class="testimonial-card__role">Personal Stylist</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"I was skeptical at first, but the results are surprisingly realistic.
+                Great for experimenting with new styles."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">D</div>
+                <div>
+                  <div class="testimonial-card__name">David R.</div>
+                  <div class="testimonial-card__role">Photographer</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"Love how easy it is to use. Just upload, pick a style, and boom—new
+                outfit. The presets are really well designed."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">A</div>
+                <div>
+                  <div class="testimonial-card__name">Alex T.</div>
+                  <div class="testimonial-card__role">Designer</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Column 3 -->
+          <div class="testimonials__column">
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"Finally an AI fashion app that actually works well. The processing is
+                quick and the results are high quality."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">L</div>
+                <div>
+                  <div class="testimonial-card__name">Lisa H.</div>
+                  <div class="testimonial-card__role">Marketing Manager</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"Using this for my Instagram content. It's so fun to create different
+                outfit posts. My followers love the variety."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">R</div>
+                <div>
+                  <div class="testimonial-card__name">Ryan P.</div>
+                  <div class="testimonial-card__role">Influencer</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"The privacy-first approach is what sold me. Photos process securely and
+                I'm in control of my data. Plus, great results!"</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">K</div>
+                <div>
+                  <div class="testimonial-card__name">Karen W.</div>
+                  <div class="testimonial-card__role">Privacy Advocate</div>
+                </div>
+              </div>
+            </div>
+            <!-- Duplicate for infinite scroll -->
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"Finally an AI fashion app that actually works well. The processing is
+                quick and the results are high quality."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">L</div>
+                <div>
+                  <div class="testimonial-card__name">Lisa H.</div>
+                  <div class="testimonial-card__role">Marketing Manager</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"Using this for my Instagram content. It's so fun to create different
+                outfit posts. My followers love the variety."</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">R</div>
+                <div>
+                  <div class="testimonial-card__name">Ryan P.</div>
+                  <div class="testimonial-card__role">Influencer</div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <p class="testimonial-card__text">"The privacy-first approach is what sold me. Photos process securely and
+                I'm in control of my data. Plus, great results!"</p>
+              <div class="testimonial-card__author">
+                <div class="testimonial-card__avatar">K</div>
+                <div>
+                  <div class="testimonial-card__name">Karen W.</div>
+                  <div class="testimonial-card__role">Privacy Advocate</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- CTA -->
     <section class="cta-section">
       <div class="container">
