--- a/contact.html
+++ b/contact.html
@@ -3,23 +3,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Outfitry Support | Get Help</title>
-    <meta name="description"
-        content="Contact Outfitry support. Email us at support@outfitry.app for help with the AI outfit generator app.">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://outfitry.app/contact.html">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://outfitry.app/contact.html">
-    <meta property="og:title" content="Contact - Outfitry Support">
-    <meta property="og:description" content="Get help with Outfitry. Email support@outfitry.app">
-    <meta property="og:image" content="https://outfitry.app/assets/og-image.svg">
-    <meta name="twitter:card" content="summary">
-    <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" type="image/png" href="/assets/outfitry.png">
-    <!-- BreadcrumbList Schema -->
-    <script type="application/ld+json">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact - Outfitry Support | Get Help</title>
+  <meta name="description"
+    content="Contact Outfitry support. Email us at support@outfitry.app for help with the AI outfit generator app.">
+  <meta name="author" content="Outfitry">
+  <meta name="keywords" content="Outfitry contact, Outfitry support, outfit generator help, AI fashion app support">
+  <meta name="theme-color" content="#000000">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://outfitry.app/contact.html">
+  <link rel="alternate" hreflang="en" href="https://outfitry.app/contact.html">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://outfitry.app/contact.html">
+  <meta property="og:title" content="Contact - Outfitry Support">
+  <meta property="og:description" content="Get help with Outfitry. Email support@outfitry.app">
+  <meta property="og:image" content="https://outfitry.app/assets/og-image.svg">
+  <meta name="twitter:card" content="summary">
+  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="icon" type="image/png" href="/assets/outfitry.png">
+  <link rel="apple-touch-icon" href="/assets/outfitry.png">
+  <!-- BreadcrumbList Schema -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -39,8 +44,8 @@
       ]
     }
     </script>
-    <!-- ContactPage Schema -->
-    <script type="application/ld+json">
+  <!-- ContactPage Schema -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "ContactPage",
@@ -58,71 +63,210 @@
 </head>
 
 <body>
-    <a href="#main" class="skip-link">Skip to content</a>
+  <a href="#main" class="skip-link">Skip to content</a>
 
-    <header class="header">
-        <div class="container header__inner">
-            <a href="/" class="header__logo"><img src="/assets/outfitry.png" alt="Outfitry">Outfitry</a>
-            <nav class="nav">
-                <ul class="nav__list" id="nav-list">
-                    <li><a href="/" class="nav__link">Home</a></li>
-                    <li><a href="/features.html" class="nav__link">Features</a></li>
-                    <li><a href="/pricing.html" class="nav__link">Pricing</a></li>
-                    <li><a href="/how-it-works.html" class="nav__link">How It Works</a></li>
-                    <li><a href="/faq.html" class="nav__link">FAQ</a></li>
-                    <li><a href="/blog/" class="nav__link">Blog</a></li>
-                </ul>
-                <a href="https://apps.apple.com/tr/app/outfitry/id6751058891" class="btn btn-primary btn-sm"
-                    target="_blank" rel="noopener">Download</a>
-                <button class="nav__toggle" aria-label="Menu"
-                    onclick="document.getElementById('nav-list').classList.toggle('is-open')"><span></span></button>
-            </nav>
+  <header class="header">
+    <div class="container header__inner">
+      <a href="/" class="header__logo"><img src="/assets/outfitry.png" alt="Outfitry">Outfitry</a>
+      <nav class="nav">
+        <ul class="nav__list" id="nav-list">
+          <li><a href="/" class="nav__link">Home</a></li>
+          <li><a href="/features.html" class="nav__link">Features</a></li>
+          <li><a href="/pricing.html" class="nav__link">Pricing</a></li>
+          <li><a href="/how-it-works.html" class="nav__link">How It Works</a></li>
+          <li><a href="/faq.html" class="nav__link">FAQ</a></li>
+          <li><a href="/blog/" class="nav__link">Blog</a></li>
+        </ul>
+        <a href="https://apps.apple.com/tr/app/outfitry/id6751058891" class="btn btn-primary btn-sm" target="_blank"
+          rel="noopener">Download</a>
+        <button class="nav__toggle" aria-label="Menu"
+          onclick="document.getElementById('nav-list').classList.toggle('is-open')"><span></span></button>
+      </nav>
+    </div>
+  </header>
+
+  <main id="main">
+    <section>
+      <div class="container container--narrow">
+        <nav class="breadcrumb"><a href="/">Home</a><span class="breadcrumb__sep">›</span><span
+            class="breadcrumb__current">Contact</span></nav>
+        <div class="section-header">
+          <h1 class="section-header__title">Contact Us</h1>
+          <p class="section-header__subtitle">We're here to help.</p>
         </div>
-    </header>
+      </div>
+    </section>
 
-    <main id="main">
-        <section>
-            <div class="container container--narrow">
-                <nav class="breadcrumb"><a href="/">Home</a><span class="breadcrumb__sep">›</span><span
-                        class="breadcrumb__current">Contact</span></nav>
-                <div class="section-header">
-                    <h1 class="section-header__title">Contact Us</h1>
-                    <p class="section-header__subtitle">We're here to help.</p>
-                </div>
+    <section class="section--soft">
+      <div class="container container--narrow">
+        <!-- Contact Form -->
+        <div class="contact-form-wrapper">
+          <h2 class="contact-form__title">📬 Get In Touch</h2>
+          <p class="contact-form__subtitle">Fill out the form below for questions, suggestions, or support requests.</p>
+
+          <form id="contactForm" class="contact-form">
+            <div class="form-group">
+              <label for="name" class="form-label">
+                <span class="form-label__icon">👤</span>
+                Name
+              </label>
+              <input type="text" id="name" name="name" class="form-input" placeholder="Your full name" required>
             </div>
-        </section>
 
-        <section class="section--soft">
-            <div class="container container--narrow">
-                <div class="contact-info">
-                    <h2 class="contact-info__title">Email Support</h2>
-                    <p class="mb-4">For questions, feedback, or support requests:</p>
-                    <a href="mailto:support@outfitry.app" class="contact-info__email">support@outfitry.app</a>
-                    <p class="mt-6 text-muted">We typically respond within 24-48 hours.</p>
-                </div>
-
-                <div class="card mt-8">
-                    <h3 class="mb-4">Before Contacting Support</h3>
-                    <p class="mb-4">Check if your question is already answered:</p>
-                    <ul>
-                        <li><a href="/faq.html">Frequently Asked Questions</a></li>
-                        <li><a href="/how-it-works.html">How It Works</a></li>
-                        <li><a href="/pricing.html">Pricing & Billing</a></li>
-                    </ul>
-                </div>
-
-                <div class="card mt-6">
-                    <h3 class="mb-4">Subscription Issues</h3>
-                    <p>For subscription or billing issues, manage your subscription in:</p>
-                    <p class="mt-2"><strong>Settings → Apple ID → Subscriptions</strong></p>
-                    <p class="mt-4">For refunds, visit <a href="https://reportaproblem.apple.com" target="_blank"
-                            rel="noopener">reportaproblem.apple.com</a></p>
-                </div>
+            <div class="form-group">
+              <label for="email" class="form-label">
+                <span class="form-label__icon">📧</span>
+                Email
+              </label>
+              <input type="email" id="email" name="email" class="form-input" placeholder="your@email.com" required>
             </div>
-        </section>
-    </main>
 
-        <footer class="footer">
+            <div class="form-group">
+              <label for="phone" class="form-label">
+                <span class="form-label__icon">📞</span>
+                Phone <span class="form-label__optional">(Optional)</span>
+              </label>
+              <input type="tel" id="phone" name="phone" class="form-input" placeholder="+1 XXX XXX XXXX">
+            </div>
+
+            <div class="form-group">
+              <label for="message" class="form-label">
+                <span class="form-label__icon">📝</span>
+                Message
+              </label>
+              <textarea id="message" name="message" class="form-input form-textarea"
+                placeholder="Write your message here..." rows="5" required></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-lg contact-form__submit" id="submitBtn">
+              <span class="btn__text">Send Message</span>
+              <span class="btn__loading" style="display: none;">
+                <svg class="spinner" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <circle cx="12" cy="12" r="10" stroke-opacity="0.25" />
+                  <path d="M12 2a10 10 0 0 1 10 10" stroke-linecap="round" />
+                </svg>
+                Sending...
+              </span>
+            </button>
+          </form>
+
+          <div id="formSuccess" class="form-message form-message--success" style="display: none;">
+            <span class="form-message__icon">✅</span>
+            <h3>Message Sent Successfully!</h3>
+            <p>We'll get back to you as soon as possible.</p>
+          </div>
+
+          <div id="formError" class="form-message form-message--error" style="display: none;">
+            <span class="form-message__icon">❌</span>
+            <h3>An Error Occurred</h3>
+            <p>Please try again or email us directly at <a href="mailto:support@outfitry.app">support@outfitry.app</a>.
+            </p>
+          </div>
+        </div>
+
+        <div class="contact-info mt-16">
+          <h2 class="contact-info__title">📧 Direct Contact</h2>
+          <p class="mb-4">Alternatively, you can reach us via email:</p>
+          <a href="mailto:support@outfitry.app" class="contact-info__email">support@outfitry.app</a>
+          <p class="mt-6 text-muted">We typically respond within 24-48 hours.</p>
+        </div>
+
+        <div class="card mt-8">
+          <h3 class="mb-4">Before Contacting Support</h3>
+          <p class="mb-4">Your question might already be answered here:</p>
+          <ul>
+            <li><a href="/faq.html">Frequently Asked Questions</a></li>
+            <li><a href="/how-it-works.html">How It Works</a></li>
+            <li><a href="/pricing.html">Pricing & Billing</a></li>
+          </ul>
+        </div>
+
+        <div class="card mt-6">
+          <h3 class="mb-4">Subscription Issues</h3>
+          <p>For subscription or billing issues, manage your subscription in:</p>
+          <p class="mt-2"><strong>Settings → Apple ID → Subscriptions</strong></p>
+          <p class="mt-4">For refunds, visit <a href="https://reportaproblem.apple.com" target="_blank"
+              rel="noopener">reportaproblem.apple.com</a>.</p>
+        </div>
+      </div>
+    </section>
+
+    <script>
+      const TELEGRAM_BOT_TOKEN = '8228564384:AAH1cXRFr-ssylWFGCasTcLJZBFptScR61c';
+      const TELEGRAM_CHAT_ID = '-5209827969';
+
+      document.getElementById('contactForm').addEventListener('submit', async function (e) {
+        e.preventDefault();
+
+        const submitBtn = document.getElementById('submitBtn');
+        const btnText = submitBtn.querySelector('.btn__text');
+        const btnLoading = submitBtn.querySelector('.btn__loading');
+        const formSuccess = document.getElementById('formSuccess');
+        const formError = document.getElementById('formError');
+        const form = this;
+
+        // Get form values
+        const name = document.getElementById('name').value.trim();
+        const email = document.getElementById('email').value.trim();
+        const phone = document.getElementById('phone').value.trim() || 'Belirtilmedi';
+        const message = document.getElementById('message').value.trim();
+
+        // Show loading state
+        btnText.style.display = 'none';
+        btnLoading.style.display = 'inline-flex';
+        submitBtn.disabled = true;
+        formSuccess.style.display = 'none';
+        formError.style.display = 'none';
+
+        // Prepare Telegram message
+        const telegramMessage = `🆕 Yeni İletişim Formu Mesajı
+
+👤 İsim: ${name}
+📧 E-posta: ${email}
+📞 Telefon: ${phone}
+📝 Mesaj:
+${message}
+
+📅 Tarih: ${new Date().toLocaleString('tr-TR')}
+🌐 Kaynak: outfitry.app/contact.html`;
+
+        try {
+          const response = await fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+              chat_id: TELEGRAM_CHAT_ID,
+              text: telegramMessage,
+              parse_mode: 'HTML'
+            })
+          });
+
+          const data = await response.json();
+
+          if (data.ok) {
+            // Success
+            form.style.display = 'none';
+            formSuccess.style.display = 'block';
+            form.reset();
+          } else {
+            throw new Error('Telegram API error');
+          }
+        } catch (error) {
+          console.error('Error:', error);
+          formError.style.display = 'block';
+        } finally {
+          // Reset button state
+          btnText.style.display = 'inline';
+          btnLoading.style.display = 'none';
+          submitBtn.disabled = false;
+        }
+      });
+    </script>
+  </main>
+
+  <footer class="footer">
     <div class="container">
       <div class="footer__main">
         <!-- Brand -->
@@ -131,21 +275,36 @@
             <img src="/assets/outfitry.png" alt="Outfitry">
             Outfitry
           </a>
-          <p class="footer__desc">AI-powered outfit generator for iPhone. Upload a photo, choose a style, generate outfit variations in seconds.</p>
+          <p class="footer__desc">AI-powered outfit generator for iPhone. Upload a photo, choose a style, generate
+            outfit variations in seconds.</p>
           <!-- Social Links -->
           <div class="footer__social">
-            <a href="https://instagram.com/outfitryapp" class="footer__social-link" aria-label="Instagram" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
+            <a href="https://www.instagram.com/outfitryapp/" class="footer__social-link" aria-label="Instagram"
+              target="_blank" rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="2" y="2" width="20" height="20" rx="5" />
+                <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z" />
+                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
+              </svg>
             </a>
-            <a href="https://twitter.com/outfitryapp" class="footer__social-link" aria-label="Twitter" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"/></svg>
+            <a href="https://x.com/outfitryapp" class="footer__social-link" aria-label="Twitter" target="_blank"
+              rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path
+                  d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
+              </svg>
             </a>
-            <a href="https://linkedin.com/company/outfitry" class="footer__social-link" aria-label="LinkedIn" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
+            <a href="https://www.tiktok.com/@outfitryapp" class="footer__social-link" aria-label="TikTok"
+              target="_blank" rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z" />
+                <rect x="2" y="9" width="4" height="12" />
+                <circle cx="4" cy="4" r="2" />
+              </svg>
             </a>
           </div>
         </div>
-        
+
         <!-- Footer Sections -->
         <div class="footer__sections">
           <div class="footer__section">
@@ -154,7 +313,8 @@
               <li><a href="/features.html">Features</a></li>
               <li><a href="/pricing.html">Pricing</a></li>
               <li><a href="/how-it-works.html">How It Works</a></li>
-              <li><a href="https://apps.apple.com/tr/app/outfitry/id6751058891" target="_blank" rel="noopener">Download</a></li>
+              <li><a href="https://apps.apple.com/tr/app/outfitry/id6751058891" target="_blank"
+                  rel="noopener">Download</a></li>
             </ul>
           </div>
           <div class="footer__section">
@@ -182,7 +342,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="footer__bottom">
         <p class="footer__copyright">© 2024 Outfitry. All rights reserved.</p>
         <div class="footer__legal">
