--- a/pricing.html
+++ b/pricing.html
@@ -7,8 +7,13 @@
     <title>Pricing - Outfitry | AI Outfit Generator</title>
     <meta name="description"
         content="Outfitry pricing: Free tier with 10 try-ons, Monthly $4.99 for 400 try-ons, Yearly $34.99 for 10,000 try-ons.">
+    <meta name="author" content="Outfitry">
+    <meta name="keywords"
+        content="Outfitry pricing, AI outfit app price, virtual try-on cost, outfit generator subscription, Outfitry Pro">
+    <meta name="theme-color" content="#000000">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://outfitry.app/pricing.html">
+    <link rel="alternate" hreflang="en" href="https://outfitry.app/pricing.html">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://outfitry.app/pricing.html">
     <meta property="og:title" content="Pricing - Outfitry AI Outfit Generator">
@@ -17,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="icon" type="image/png" href="/assets/outfitry.png">
-    <!-- BreadcrumbList Schema -->
+    <link rel="apple-touch-icon" href="/assets/outfitry.png">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -36,6 +41,59 @@
           "item": "https://outfitry.app/pricing.html"
         }
       ]
+    }
+    </script>
+    <!-- Product Schema for Pricing -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Outfitry Pro",
+      "description": "AI-powered outfit generator subscription for iPhone. Generate unlimited outfit variations with 30+ style presets, HD exports, and no watermarks.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Outfitry"
+      },
+      "category": "Software > Mobile Apps > Lifestyle",
+      "image": "https://outfitry.app/assets/outfitry.png",
+      "offers": [
+        {
+          "@type": "Offer",
+          "name": "Free",
+          "price": "0",
+          "priceCurrency": "USD",
+          "description": "10 outfit try-ons, 2 style presets, standard quality",
+          "availability": "https://schema.org/InStock",
+          "url": "https://apps.apple.com/tr/app/outfitry/id6751058891"
+        },
+        {
+          "@type": "Offer",
+          "name": "Pro Monthly",
+          "price": "4.99",
+          "priceCurrency": "USD",
+          "description": "400 try-ons per month, all style presets, HD exports, no watermarks",
+          "availability": "https://schema.org/InStock",
+          "priceValidUntil": "2026-12-31",
+          "url": "https://apps.apple.com/tr/app/outfitry/id6751058891"
+        },
+        {
+          "@type": "Offer",
+          "name": "Pro Yearly",
+          "price": "34.99",
+          "priceCurrency": "USD",
+          "description": "10,000 try-ons per year, all style presets, HD exports, no watermarks, 42% savings",
+          "availability": "https://schema.org/InStock",
+          "priceValidUntil": "2026-12-31",
+          "url": "https://apps.apple.com/tr/app/outfitry/id6751058891"
+        }
+      ],
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "150",
+        "bestRating": "5",
+        "worstRating": "1"
+      }
     }
     </script>
     <style>
@@ -334,7 +392,11 @@
                 <div class="pricing-section__header">
                     <h1 class="pricing-section__title">Pricing</h1>
                     <!-- GEO Summary -->
-                    <p class="geo-summary" style="text-align:center; margin:var(--space-6) auto;">Outfitry pricing: Free tier includes 10 outfit try-ons forever. Monthly Pro costs $4.99 for 400 try-ons per month with HD exports, no watermarks, and all style presets. Yearly Pro costs $34.99 (saves 42%) for 10,000 try-ons per year. All Pro features include priority processing. Cancel anytime through Apple subscription settings.</p>
+                    <p class="geo-summary" style="text-align:center; margin:var(--space-6) auto;">Outfitry pricing: Free
+                        tier includes 10 outfit try-ons forever. Monthly Pro costs $4.99 for 400 try-ons per month with
+                        HD exports, no watermarks, and all style presets. Yearly Pro costs $34.99 (saves 42%) for 10,000
+                        try-ons per year. All Pro features include priority processing. Cancel anytime through Apple
+                        subscription settings.</p>
                     <p class="pricing-section__subtitle">Use it for free to try, upgrade when you need more try-ons.</p>
                 </div>
 
@@ -614,7 +676,7 @@
                     <p class="footer__desc">AI-powered outfit generator for iPhone. Upload a photo, choose a style,
                         generate outfit variations in seconds.</p>
                     <div class="footer__social">
-                        <a href="https://instagram.com/outfitryapp" class="footer__social-link" aria-label="Instagram"
+                        <a href="https://www.instagram.com/outfitryapp/" class="footer__social-link" aria-label="Instagram"
                             target="_blank" rel="noopener">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <rect x="2" y="2" width="20" height="20" rx="5" />
@@ -622,15 +684,15 @@
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
                             </svg>
                         </a>
-                        <a href="https://twitter.com/outfitryapp" class="footer__social-link" aria-label="Twitter"
+                        <a href="https://x.com/outfitryapp" class="footer__social-link" aria-label="Twitter"
                             target="_blank" rel="noopener">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path
                                     d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
                             </svg>
                         </a>
-                        <a href="https://linkedin.com/company/outfitry" class="footer__social-link"
-                            aria-label="LinkedIn" target="_blank" rel="noopener">
+                        <a href="https://www.tiktok.com/@outfitryapp" class="footer__social-link"
+                            aria-label="TikTok" target="_blank" rel="noopener">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z" />
                                 <rect x="2" y="9" width="4" height="12" />
