--- a/privacy.html
+++ b/privacy.html
@@ -3,23 +3,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Outfitry</title>
-    <meta name="description"
-        content="Outfitry Privacy Policy. Learn how we handle your data, photos, and personal information.">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://outfitry.app/privacy.html">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://outfitry.app/privacy.html">
-    <meta property="og:title" content="Privacy Policy - Outfitry">
-    <meta property="og:description" content="How Outfitry handles your data and privacy.">
-    <meta property="og:image" content="https://outfitry.app/assets/og-image.svg">
-    <meta name="twitter:card" content="summary">
-    <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" type="image/png" href="/assets/outfitry.png">
-    <!-- BreadcrumbList Schema -->
-    <script type="application/ld+json">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - Outfitry</title>
+  <meta name="description"
+    content="Outfitry Privacy Policy. Learn how we handle your data, photos, and personal information.">
+  <meta name="author" content="Outfitry">
+  <meta name="theme-color" content="#000000">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://outfitry.app/privacy.html">
+  <link rel="alternate" hreflang="en" href="https://outfitry.app/privacy.html">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://outfitry.app/privacy.html">
+  <meta property="og:title" content="Privacy Policy - Outfitry">
+  <meta property="og:description" content="How Outfitry handles your data and privacy.">
+  <meta property="og:image" content="https://outfitry.app/assets/og-image.svg">
+  <meta name="twitter:card" content="summary">
+  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="icon" type="image/png" href="/assets/outfitry.png">
+  <link rel="apple-touch-icon" href="/assets/outfitry.png">
+  <!-- BreadcrumbList Schema -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -42,93 +46,93 @@
 </head>
 
 <body>
-    <a href="#main" class="skip-link">Skip to content</a>
+  <a href="#main" class="skip-link">Skip to content</a>
 
-    <header class="header">
-        <div class="container header__inner">
-            <a href="/" class="header__logo"><img src="/assets/outfitry.png" alt="Outfitry">Outfitry</a>
-            <nav class="nav">
-                <ul class="nav__list" id="nav-list">
-                    <li><a href="/" class="nav__link">Home</a></li>
-                    <li><a href="/features.html" class="nav__link">Features</a></li>
-                    <li><a href="/pricing.html" class="nav__link">Pricing</a></li>
-                    <li><a href="/how-it-works.html" class="nav__link">How It Works</a></li>
-                    <li><a href="/faq.html" class="nav__link">FAQ</a></li>
-                    <li><a href="/blog/" class="nav__link">Blog</a></li>
-                </ul>
-                <a href="https://apps.apple.com/tr/app/outfitry/id6751058891" class="btn btn-primary btn-sm"
-                    target="_blank" rel="noopener">Download</a>
-                <button class="nav__toggle" aria-label="Menu"
-                    onclick="document.getElementById('nav-list').classList.toggle('is-open')"><span></span></button>
-            </nav>
-        </div>
-    </header>
+  <header class="header">
+    <div class="container header__inner">
+      <a href="/" class="header__logo"><img src="/assets/outfitry.png" alt="Outfitry">Outfitry</a>
+      <nav class="nav">
+        <ul class="nav__list" id="nav-list">
+          <li><a href="/" class="nav__link">Home</a></li>
+          <li><a href="/features.html" class="nav__link">Features</a></li>
+          <li><a href="/pricing.html" class="nav__link">Pricing</a></li>
+          <li><a href="/how-it-works.html" class="nav__link">How It Works</a></li>
+          <li><a href="/faq.html" class="nav__link">FAQ</a></li>
+          <li><a href="/blog/" class="nav__link">Blog</a></li>
+        </ul>
+        <a href="https://apps.apple.com/tr/app/outfitry/id6751058891" class="btn btn-primary btn-sm" target="_blank"
+          rel="noopener">Download</a>
+        <button class="nav__toggle" aria-label="Menu"
+          onclick="document.getElementById('nav-list').classList.toggle('is-open')"><span></span></button>
+      </nav>
+    </div>
+  </header>
 
-    <main id="main">
-        <div class="legal">
-            <nav class="breadcrumb"><a href="/">Home</a><span class="breadcrumb__sep">›</span><span
-                    class="breadcrumb__current">Privacy Policy</span></nav>
+  <main id="main">
+    <div class="legal">
+      <nav class="breadcrumb"><a href="/">Home</a><span class="breadcrumb__sep">›</span><span
+          class="breadcrumb__current">Privacy Policy</span></nav>
 
-            <h1>Privacy Policy</h1>
-            <p class="legal__date">Last updated: January 2024</p>
+      <h1>Privacy Policy</h1>
+      <p class="legal__date">Last updated: January 2024</p>
 
-            <p>Outfitry ("we," "us," or "our") is committed to protecting your privacy. This Privacy Policy explains how
-                we collect, use, and safeguard your information.</p>
+      <p>Outfitry ("we," "us," or "our") is committed to protecting your privacy. This Privacy Policy explains how
+        we collect, use, and safeguard your information.</p>
 
-            <h2>Information We Collect</h2>
-            <ul>
-                <li><strong>Photos:</strong> Images you upload for outfit generation</li>
-                <li><strong>Account Information:</strong> Email if you create an account</li>
-                <li><strong>Usage Data:</strong> Anonymous analytics about app usage</li>
-                <li><strong>Device Information:</strong> Device type, OS version</li>
-                <li><strong>Purchase Information:</strong> Subscription status (via Apple)</li>
-            </ul>
+      <h2>Information We Collect</h2>
+      <ul>
+        <li><strong>Photos:</strong> Images you upload for outfit generation</li>
+        <li><strong>Account Information:</strong> Email if you create an account</li>
+        <li><strong>Usage Data:</strong> Anonymous analytics about app usage</li>
+        <li><strong>Device Information:</strong> Device type, OS version</li>
+        <li><strong>Purchase Information:</strong> Subscription status (via Apple)</li>
+      </ul>
 
-            <h2>How We Use Your Information</h2>
-            <ul>
-                <li>Provide the AI outfit generation service</li>
-                <li>Process and manage subscriptions</li>
-                <li>Improve the app experience</li>
-                <li>Respond to support requests</li>
-            </ul>
+      <h2>How We Use Your Information</h2>
+      <ul>
+        <li>Provide the AI outfit generation service</li>
+        <li>Process and manage subscriptions</li>
+        <li>Improve the app experience</li>
+        <li>Respond to support requests</li>
+      </ul>
 
-            <h2>Photo Processing</h2>
-            <p>Photos are processed to generate outfit variations. We:</p>
-            <ul>
-                <li>Process photos securely</li>
-                <li>Do not use photos for AI training without consent</li>
-                <li>Allow you to delete your data anytime</li>
-            </ul>
+      <h2>Photo Processing</h2>
+      <p>Photos are processed to generate outfit variations. We:</p>
+      <ul>
+        <li>Process photos securely</li>
+        <li>Do not use photos for AI training without consent</li>
+        <li>Allow you to delete your data anytime</li>
+      </ul>
 
-            <h2>Data Sharing</h2>
-            <p>We do not sell your personal information. We may share data with:</p>
-            <ul>
-                <li><strong>Service Providers:</strong> Third parties that help operate the app</li>
-                <li><strong>Legal Requirements:</strong> When required by law</li>
-            </ul>
+      <h2>Data Sharing</h2>
+      <p>We do not sell your personal information. We may share data with:</p>
+      <ul>
+        <li><strong>Service Providers:</strong> Third parties that help operate the app</li>
+        <li><strong>Legal Requirements:</strong> When required by law</li>
+      </ul>
 
-            <h2>Your Rights</h2>
-            <p>You may have rights to:</p>
-            <ul>
-                <li>Access your personal information</li>
-                <li>Correct inaccurate data</li>
-                <li>Delete your data</li>
-                <li>Object to certain processing</li>
-            </ul>
-            <p>Contact support@outfitry.app to exercise these rights.</p>
+      <h2>Your Rights</h2>
+      <p>You may have rights to:</p>
+      <ul>
+        <li>Access your personal information</li>
+        <li>Correct inaccurate data</li>
+        <li>Delete your data</li>
+        <li>Object to certain processing</li>
+      </ul>
+      <p>Contact support@outfitry.app to exercise these rights.</p>
 
-            <h2>Children's Privacy</h2>
-            <p>Outfitry is not intended for children under 13.</p>
+      <h2>Children's Privacy</h2>
+      <p>Outfitry is not intended for children under 13.</p>
 
-            <h2>Changes</h2>
-            <p>We may update this policy. Check the "Last updated" date.</p>
+      <h2>Changes</h2>
+      <p>We may update this policy. Check the "Last updated" date.</p>
 
-            <h2>Contact</h2>
-            <p>Email: support@outfitry.app</p>
-        </div>
-    </main>
+      <h2>Contact</h2>
+      <p>Email: support@outfitry.app</p>
+    </div>
+  </main>
 
-        <footer class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="footer__main">
         <!-- Brand -->
@@ -137,21 +141,36 @@
             <img src="/assets/outfitry.png" alt="Outfitry">
             Outfitry
           </a>
-          <p class="footer__desc">AI-powered outfit generator for iPhone. Upload a photo, choose a style, generate outfit variations in seconds.</p>
+          <p class="footer__desc">AI-powered outfit generator for iPhone. Upload a photo, choose a style, generate
+            outfit variations in seconds.</p>
           <!-- Social Links -->
           <div class="footer__social">
-            <a href="https://instagram.com/outfitryapp" class="footer__social-link" aria-label="Instagram" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
+            <a href="https://www.instagram.com/outfitryapp/" class="footer__social-link" aria-label="Instagram"
+              target="_blank" rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="2" y="2" width="20" height="20" rx="5" />
+                <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z" />
+                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
+              </svg>
             </a>
-            <a href="https://twitter.com/outfitryapp" class="footer__social-link" aria-label="Twitter" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"/></svg>
+            <a href="https://x.com/outfitryapp" class="footer__social-link" aria-label="Twitter" target="_blank"
+              rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path
+                  d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
+              </svg>
             </a>
-            <a href="https://linkedin.com/company/outfitry" class="footer__social-link" aria-label="LinkedIn" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
+            <a href="https://www.tiktok.com/@outfitryapp" class="footer__social-link" aria-label="TikTok"
+              target="_blank" rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z" />
+                <rect x="2" y="9" width="4" height="12" />
+                <circle cx="4" cy="4" r="2" />
+              </svg>
             </a>
           </div>
         </div>
-        
+
         <!-- Footer Sections -->
         <div class="footer__sections">
           <div class="footer__section">
@@ -160,7 +179,8 @@
               <li><a href="/features.html">Features</a></li>
               <li><a href="/pricing.html">Pricing</a></li>
               <li><a href="/how-it-works.html">How It Works</a></li>
-              <li><a href="https://apps.apple.com/tr/app/outfitry/id6751058891" target="_blank" rel="noopener">Download</a></li>
+              <li><a href="https://apps.apple.com/tr/app/outfitry/id6751058891" target="_blank"
+                  rel="noopener">Download</a></li>
             </ul>
           </div>
           <div class="footer__section">
@@ -188,7 +208,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="footer__bottom">
         <p class="footer__copyright">© 2024 Outfitry. All rights reserved.</p>
         <div class="footer__legal">
