--- a/terms.html
+++ b/terms.html
@@ -3,22 +3,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Outfitry</title>
-    <meta name="description" content="Outfitry Terms of Service. Read our terms for using the AI outfit generator app.">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://outfitry.app/terms.html">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://outfitry.app/terms.html">
-    <meta property="og:title" content="Terms of Service - Outfitry">
-    <meta property="og:description" content="Terms and conditions for using Outfitry.">
-    <meta property="og:image" content="https://outfitry.app/assets/og-image.svg">
-    <meta name="twitter:card" content="summary">
-    <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" type="image/png" href="/assets/outfitry.png">
-    <!-- BreadcrumbList Schema -->
-    <script type="application/ld+json">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms of Service - Outfitry</title>
+  <meta name="description" content="Outfitry Terms of Service. Read our terms for using the AI outfit generator app.">
+  <meta name="author" content="Outfitry">
+  <meta name="theme-color" content="#000000">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://outfitry.app/terms.html">
+  <link rel="alternate" hreflang="en" href="https://outfitry.app/terms.html">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://outfitry.app/terms.html">
+  <meta property="og:title" content="Terms of Service - Outfitry">
+  <meta property="og:description" content="Terms and conditions for using Outfitry.">
+  <meta property="og:image" content="https://outfitry.app/assets/og-image.svg">
+  <meta name="twitter:card" content="summary">
+  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="icon" type="image/png" href="/assets/outfitry.png">
+  <link rel="apple-touch-icon" href="/assets/outfitry.png">
+  <!-- BreadcrumbList Schema -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -41,87 +45,87 @@
 </head>
 
 <body>
-    <a href="#main" class="skip-link">Skip to content</a>
+  <a href="#main" class="skip-link">Skip to content</a>
 
-    <header class="header">
-        <div class="container header__inner">
-            <a href="/" class="header__logo"><img src="/assets/outfitry.png" alt="Outfitry">Outfitry</a>
-            <nav class="nav">
-                <ul class="nav__list" id="nav-list">
-                    <li><a href="/" class="nav__link">Home</a></li>
-                    <li><a href="/features.html" class="nav__link">Features</a></li>
-                    <li><a href="/pricing.html" class="nav__link">Pricing</a></li>
-                    <li><a href="/how-it-works.html" class="nav__link">How It Works</a></li>
-                    <li><a href="/faq.html" class="nav__link">FAQ</a></li>
-                    <li><a href="/blog/" class="nav__link">Blog</a></li>
-                </ul>
-                <a href="https://apps.apple.com/tr/app/outfitry/id6751058891" class="btn btn-primary btn-sm"
-                    target="_blank" rel="noopener">Download</a>
-                <button class="nav__toggle" aria-label="Menu"
-                    onclick="document.getElementById('nav-list').classList.toggle('is-open')"><span></span></button>
-            </nav>
-        </div>
-    </header>
+  <header class="header">
+    <div class="container header__inner">
+      <a href="/" class="header__logo"><img src="/assets/outfitry.png" alt="Outfitry">Outfitry</a>
+      <nav class="nav">
+        <ul class="nav__list" id="nav-list">
+          <li><a href="/" class="nav__link">Home</a></li>
+          <li><a href="/features.html" class="nav__link">Features</a></li>
+          <li><a href="/pricing.html" class="nav__link">Pricing</a></li>
+          <li><a href="/how-it-works.html" class="nav__link">How It Works</a></li>
+          <li><a href="/faq.html" class="nav__link">FAQ</a></li>
+          <li><a href="/blog/" class="nav__link">Blog</a></li>
+        </ul>
+        <a href="https://apps.apple.com/tr/app/outfitry/id6751058891" class="btn btn-primary btn-sm" target="_blank"
+          rel="noopener">Download</a>
+        <button class="nav__toggle" aria-label="Menu"
+          onclick="document.getElementById('nav-list').classList.toggle('is-open')"><span></span></button>
+      </nav>
+    </div>
+  </header>
 
-    <main id="main">
-        <div class="legal">
-            <nav class="breadcrumb"><a href="/">Home</a><span class="breadcrumb__sep">›</span><span
-                    class="breadcrumb__current">Terms of Service</span></nav>
+  <main id="main">
+    <div class="legal">
+      <nav class="breadcrumb"><a href="/">Home</a><span class="breadcrumb__sep">›</span><span
+          class="breadcrumb__current">Terms of Service</span></nav>
 
-            <h1>Terms of Service</h1>
-            <p class="legal__date">Last updated: January 2024</p>
+      <h1>Terms of Service</h1>
+      <p class="legal__date">Last updated: January 2024</p>
 
-            <p>By using Outfitry, you agree to these Terms of Service.</p>
+      <p>By using Outfitry, you agree to these Terms of Service.</p>
 
-            <h2>Description of Service</h2>
-            <p>Outfitry is an AI-powered mobile application that generates outfit variations from photos. The service is
-                for entertainment and style exploration.</p>
+      <h2>Description of Service</h2>
+      <p>Outfitry is an AI-powered mobile application that generates outfit variations from photos. The service is
+        for entertainment and style exploration.</p>
 
-            <h2>Acceptable Use</h2>
-            <p>You agree not to:</p>
-            <ul>
-                <li>Upload illegal or harmful content</li>
-                <li>Generate inappropriate content</li>
-                <li>Reverse engineer the app</li>
-                <li>Upload photos of others without consent</li>
-                <li>Violate applicable laws</li>
-            </ul>
+      <h2>Acceptable Use</h2>
+      <p>You agree not to:</p>
+      <ul>
+        <li>Upload illegal or harmful content</li>
+        <li>Generate inappropriate content</li>
+        <li>Reverse engineer the app</li>
+        <li>Upload photos of others without consent</li>
+        <li>Violate applicable laws</li>
+      </ul>
 
-            <h2>User Content</h2>
-            <p>You retain ownership of photos you upload. By uploading, you grant us a limited license to process them.
-                You are responsible for content you upload.</p>
+      <h2>User Content</h2>
+      <p>You retain ownership of photos you upload. By uploading, you grant us a limited license to process them.
+        You are responsible for content you upload.</p>
 
-            <h2>Subscriptions</h2>
-            <ul>
-                <li>Billed through Apple's App Store</li>
-                <li>Auto-renew unless cancelled 24 hours before period ends</li>
-                <li>Manage in Apple ID settings</li>
-                <li>Refunds subject to Apple's policies</li>
-            </ul>
+      <h2>Subscriptions</h2>
+      <ul>
+        <li>Billed through Apple's App Store</li>
+        <li>Auto-renew unless cancelled 24 hours before period ends</li>
+        <li>Manage in Apple ID settings</li>
+        <li>Refunds subject to Apple's policies</li>
+      </ul>
 
-            <h2>AI-Generated Content</h2>
-            <ul>
-                <li>Results may vary</li>
-                <li>Generated images are for personal use</li>
-                <li>We make no guarantees about accuracy</li>
-            </ul>
+      <h2>AI-Generated Content</h2>
+      <ul>
+        <li>Results may vary</li>
+        <li>Generated images are for personal use</li>
+        <li>We make no guarantees about accuracy</li>
+      </ul>
 
-            <h2>Disclaimers</h2>
-            <p>OUTFITRY IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND.</p>
+      <h2>Disclaimers</h2>
+      <p>OUTFITRY IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND.</p>
 
-            <h2>Limitation of Liability</h2>
-            <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, WE SHALL NOT BE LIABLE FOR INDIRECT, INCIDENTAL, SPECIAL, OR
-                CONSEQUENTIAL DAMAGES.</p>
+      <h2>Limitation of Liability</h2>
+      <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, WE SHALL NOT BE LIABLE FOR INDIRECT, INCIDENTAL, SPECIAL, OR
+        CONSEQUENTIAL DAMAGES.</p>
 
-            <h2>Changes</h2>
-            <p>We may modify these Terms. Continued use constitutes acceptance.</p>
+      <h2>Changes</h2>
+      <p>We may modify these Terms. Continued use constitutes acceptance.</p>
 
-            <h2>Contact</h2>
-            <p>Email: support@outfitry.app</p>
-        </div>
-    </main>
+      <h2>Contact</h2>
+      <p>Email: support@outfitry.app</p>
+    </div>
+  </main>
 
-        <footer class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="footer__main">
         <!-- Brand -->
@@ -130,21 +134,36 @@
             <img src="/assets/outfitry.png" alt="Outfitry">
             Outfitry
           </a>
-          <p class="footer__desc">AI-powered outfit generator for iPhone. Upload a photo, choose a style, generate outfit variations in seconds.</p>
+          <p class="footer__desc">AI-powered outfit generator for iPhone. Upload a photo, choose a style, generate
+            outfit variations in seconds.</p>
           <!-- Social Links -->
           <div class="footer__social">
-            <a href="https://instagram.com/outfitryapp" class="footer__social-link" aria-label="Instagram" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
+            <a href="https://www.instagram.com/outfitryapp/" class="footer__social-link" aria-label="Instagram"
+              target="_blank" rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="2" y="2" width="20" height="20" rx="5" />
+                <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z" />
+                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
+              </svg>
             </a>
-            <a href="https://twitter.com/outfitryapp" class="footer__social-link" aria-label="Twitter" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"/></svg>
+            <a href="https://x.com/outfitryapp" class="footer__social-link" aria-label="Twitter" target="_blank"
+              rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path
+                  d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
+              </svg>
             </a>
-            <a href="https://linkedin.com/company/outfitry" class="footer__social-link" aria-label="LinkedIn" target="_blank" rel="noopener">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
+            <a href="https://www.tiktok.com/@outfitryapp" class="footer__social-link" aria-label="TikTok"
+              target="_blank" rel="noopener">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z" />
+                <rect x="2" y="9" width="4" height="12" />
+                <circle cx="4" cy="4" r="2" />
+              </svg>
             </a>
           </div>
         </div>
-        
+
         <!-- Footer Sections -->
         <div class="footer__sections">
           <div class="footer__section">
@@ -153,7 +172,8 @@
               <li><a href="/features.html">Features</a></li>
               <li><a href="/pricing.html">Pricing</a></li>
               <li><a href="/how-it-works.html">How It Works</a></li>
-              <li><a href="https://apps.apple.com/tr/app/outfitry/id6751058891" target="_blank" rel="noopener">Download</a></li>
+              <li><a href="https://apps.apple.com/tr/app/outfitry/id6751058891" target="_blank"
+                  rel="noopener">Download</a></li>
             </ul>
           </div>
           <div class="footer__section">
@@ -181,7 +201,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="footer__bottom">
         <p class="footer__copyright">© 2024 Outfitry. All rights reserved.</p>
         <div class="footer__legal">
